1.2.1i3:
    Core:
    * added HOST/SERVICEPROBLEMID to notification macros
    Event Console:
    * New performance counter for client request processing time
    * FIX: fixed bug in rule optimizer with ranges of syslog priorities

    WATO:
    * Cloning of contact/host/service groups (without members)


1.2.1i2:
    Core:
    * Improved validation of inventory data reported by checks
    * Added -d option to precompiled checks to enable debug mode
    * doc/treasures: added script for printing RRD statistics

    Notifications:
    * New system of custom notification, with WATO support

    Event Console:
    * Moved source of Event Console into Check_MK project 
    * New button for resetting all rule hits counters
    * When saving a rule then its hits counter is always reset
    * New feature of hiding certain actions from the commands in the status GUI
    * FIX: rule simulator ("Try out") now handles cancelling rules correctly
    * New global option for enabling log entries for rule hits (debugging)
    * New icon linking to event views for the event services
    * check_mkevents outputs last worst line in service output
    * Max. number of queued connections on status sockets is configurable now
    * check_mkevents: new option -a for ignoring acknowledged events
    * New sub-permissions for changing comment and contact while updating an event
    * New button for generating test events directly via WATO
    * Allow Event Console to replicate from another (master) console for
      fast failover.
    * Allow event expiration also on acknowledged events (configurable)

    Multisite:
    * Enable automation login with _username= and _secret=, while
      _secret is the content of var/check_mk/web/$USER/automation.secret
    * FIX: Fixed releasing of locks and livestatus connections when logging out
    * FIX: Fixed login/login confusions with index page caching
    * FIX: Speed-o-meter: Fixed calculation of Check_MK passive check invervals